--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Bubble Plot Visualisation</title>
-    <script src="Code/d3.min.js"></script>
-    <script src="Code/d3.js"></script>
-    <link rel="stylesheet" href="CSS/style.css">
+    <script src="d3.min.js"></script>
+    <script src="d3.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
@@ -45,6 +45,6 @@
         <button class="btncls" onclick="reset_country()" id="reset_c">Reset</button>
     </div>
 </div>
-        <script src="Code/codefile.js"></script>
+        <script src="codefile.js"></script>
 </body>
 </html>
